# mkxpud

./: README.markdown
config/: 2.6.28.cookbook  config-2.6.30  default.cookbook  jaunty.cookbook  karmic.cookbook  lucid.cookbook  xpad.cookbook  xpud089.cookbook
deploy/: bzImage  vmlinuz-2.6.30  vmlinuz-2.6.30.2  vmlinuz-2.6.30.5  vmlinuz-2.6.31.2  vmlinuz-2.6.32.7
kernel/: config-2.6.28  config-2.6.30.5  config-2.6.31.2  config-2.6.32.7  config-2.6.35.7  config-busybox-1.15.2
kernel/module/: 2.6.28-modules.tgz  default-module-2.6.28.tgz  default-module-2.6.30.5.tgz  default-module-2.6.30.tgz
package/config/: .Xdefaults  .gtkrc-2.0
package/recipe/: artwork.recipe  chromeos.recipe  core-utils.recipe  dbus.recipe  initramfs.recipe  lucid-apps-office.recipe  lucid-core-utils.recipe  lucid-debug.recipe  lucid-pcmanfm2.recipe  lucid-scim-chewing.recipe  lucid-wireless-tools.recipe  lucid-x11.recipe  lucid-xorg.recipe  network.recipe  plate.recipe  python.recipe  sound.recipe  ubuntu-apps-net.recipe  ubuntu-apps-office.recipe  ubuntu-apps-skype.recipe  ubuntu-apps-utils.recipe  ubuntu-apps.recipe  ubuntu-apt.recipe  ubuntu-artwork.recipe  ubuntu-cjkfont.recipe  (+26 more)
skeleton/: rootfs.tgz
skeleton/archive/tableware-plugin/: COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  npshell.c  npunix.c  tableware.c  tableware.h
skeleton/archive/tableware-plugin/doc/: Makefile.in
tools/: busybox-helper  function.sh  generate-kmap.sh  geniso.sh  isohybrid  ldd-helper  makensis  mksquashfs  mkxpud  module-helper  parser  po2json.pl
(+372 files in other folders)
