AC_INIT(tableware, 0.1, penkia@gmail.com)
AC_CONFIG_SRCDIR(npshell.c)
AM_INIT_AUTOMAKE(tableware, 0.1)
AC_CONFIG_HEADER(config.h)
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

# don't want static libraries
AC_DISABLE_STATIC

AC_PROG_LIBTOOL

AC_CONFIG_FILES([
	Makefile
	doc/Makefile
])

AC_OUTPUT
